Bug 239039 - mld6query: Fix typo s/linkocal/linklocal/
Summary: mld6query: Fix typo s/linkocal/linklocal/
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: bin (show other bugs)
Version: CURRENT
Hardware: Any Any
: --- Affects Only Me
Assignee: freebsd-bugs (Nobody)
URL:
Keywords: patch
Depends on:
Blocks:
 
Reported: 2019-07-08 00:15 UTC by Koichiro Iwao
Modified: 2019-07-09 00:36 UTC (History)
1 user (show)

See Also:


Attachments
patch (456 bytes, text/plain)
2019-07-08 00:15 UTC, Koichiro Iwao
no flags Details

Note You need to log in before you can comment on or make changes to this bug.
Description Koichiro Iwao freebsd_committer freebsd_triage 2019-07-08 00:15:50 UTC
Created attachment 205574 [details]
patch
Comment 1 Mark Johnston freebsd_committer freebsd_triage 2019-07-08 14:34:48 UTC
Please feel free to commit the patch with "Approved by: markj".
Comment 2 commit-hook freebsd_committer freebsd_triage 2019-07-08 22:20:58 UTC
A commit references this bug:

Author: meta
Date: Mon Jul  8 22:20:26 UTC 2019
New revision: 349853
URL: https://svnweb.freebsd.org/changeset/base/349853

Log:
  mld6query: Fix typo s/linkocal/linklocal/

  PR:		239039
  Approved by:	markj

Changes:
  head/usr.sbin/mld6query/mld6.c
Comment 3 Koichiro Iwao freebsd_committer freebsd_triage 2019-07-09 00:36:15 UTC
Committed. Thanks for your review!