mld6query: Fix typo s/linkocal/linklocal/

PR:		239039
Approved by:	markj